# notas-musicais

./: .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: acordes.md  campo_harmonico.md  escalas.md
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escala.py
